# modular-agent-lifelog

./: Cargo.toml  README.md
src/: application.rs  lib.rs  screen.rs
