[package]
name = "modular-agent-lifelog"
version = "0.5.0"
edition = "2024"
authors = ["Akira Ishino <akira@lumilab.jp>"]
license = "Apache-2.0 OR MIT"
description = "Lifelog Agents for Modular Agent Kit"

[dependencies]
active-win-pos-rs = { version = "0.9.1", optional = true }
base64 = { version = "0.22.1", optional = true }
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
xcap = { version = "0.7.1", optional = true }

modular-agent-kit = "0.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26.0", optional = true }
objc = { version = "0.2.7", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = { version = "0.68.1", optional = true }

[features]
default = ["application", "screen"]
application = ["active-win-pos-rs", "cocoa", "objc", "bindgen"]
screen = ["base64", "xcap"]

# [patch.crates-io]
# modular-agent-kit = { path = "../modular-agent-kit/modular-agent-kit" }
